--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -27,7 +27,7 @@
 
 <!-- Footer -->
 <div th:fragment="footer">
-	<footer class="py-5 bg-dark">
+	<footer class="py-5 bg-dark" style="bottom: 0;">
 		<div class="container">
 			<p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
 		</div>
