--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -38,8 +38,7 @@
 			<li class="breadcrumb-item active">Ver Productos</li>
 		</ol>
 
-		<a class="btn btn-primary" th:href="@{/productos/create}"> Crear Producto</a>
-		<h2>Productos</h2>
+		<p><a class="btn btn-primary" th:href="@{/productos/create}"> Crear Producto</a></p>
 		<table class="table">
 			<thead>
 				<tr>
@@ -57,8 +56,8 @@
 					<td th:text="${producto.cantidad}"></td >
 					<td th:text="${producto.precio}"></td >
 					<td>
-						<a class="btn btn-warning" th:href="@{productos/edit/{id}(id=${producto.id}) }">Editar</a>
-						<a class="btn btn-danger" href="">Eliminar</a>
+						<a class="btn btn-warning" th:href="@{productos/edit/{id}(id=${producto.id})}">Editar</a>
+						<a class="btn btn-danger" th:href="@{productos/delete/{id}(id=${producto.id})}">Eliminar</a>
 					</td>
 				</tr >
 			</tbody>
