--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -23,7 +23,7 @@
 
 	<!-- Navigation -->
 	<div th:include="usuario/template_usuario.html::header">
-	</div >
+	</div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -35,7 +35,7 @@
 		</h1>
 
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
 			<li class="breadcrumb-item active">Producto</li>
 		</ol>
 
@@ -44,19 +44,20 @@
 			<div class="card-body">
 				<div class="row">
 					<div class="col-lg-6">
-						<a href="#"> <img class="img-fluid rounded" src="http://placehold.it/500x325" alt="">
+						<a href="#"> <img class="img-fluid rounded" th:src="@{/images/{img}(img=${producto.imagen})}"
+								alt="">
 						</a>
 					</div>
 					<div class="col-lg-6">
 						<form action="carrito.html" method="POST">
-							<h2 class="card-title">Nombre producto</h2>
+							<h2 class="card-title" th:text="${producto.nombre}"></h2>
 
 							<ul class="list-group">
 								<li class="list-group-item">
-									<h5>Precio: </h5>
+									<h5 th:text="'Precio: $'+${producto.precio}"></h5>
 								</li>
 								<li class="list-group-item">
-									<p>Descripción:</p>
+									<p th:text="'Descripción: '+${producto.descripcion}"></p>
 								</li>
 								<li class="list-group-item">
 									<h6>
@@ -65,7 +66,6 @@
 									</h6>
 								</li>
 							</ul>
-
 
 							<button type="submit" class="btn btn-dark">Añadir al carrito </button>
 
@@ -81,7 +81,7 @@
 
 	<!-- Footer -->
 	<div th:include="usuario/template_usuario.html::footer">
-	</div >
+	</div>
 
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
