--- a/src/main/resources/static/css/heroic-features.css
+++ b/src/main/resources/static/css/heroic-features.css
@@ -3,6 +3,17 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-heroic-features/blob/master/LICENSE)
  */
+ html {
+  min-height: 100%;
+  position: relative;
+}
 body {
-  padding-top: 56px;
+  margin-top: 4.5em;
+  margin-bottom: 7em;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
 }
