--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -59,8 +59,9 @@
 									<td th:text="${dorden.precio}"></td>
 									<td th:text="${dorden.cantidad}"></td>
 									<td th:text="${dorden.total}"></td>
-									<td><a th:href="@{/delete/cart/{id}(id=${dorden.producto.id})}" class="btn btn-danger">Quitar</a></td>
-								</tr >
+									<td><a th:href="@{/delete/cart/{id}(id=${dorden.producto.id})}"
+											class="btn btn-danger">Quitar</a></td>
+								</tr>
 							</tbody>
 						</table>
 					</div>
@@ -70,7 +71,7 @@
 
 						<ul class="list-group">
 							<li class="list-group-item">
-								<h5 th:text="'$'+${orden.total}"></h5 >
+								<h5 th:text="'$'+${orden.total}"></h5>
 							</li>
 							<a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
 						</ul>
@@ -79,15 +80,16 @@
 				</div>
 			</div>
 		</div>
-		<!-- /.container -->
+	</div>
+	<!-- /.container -->
 
-		<!-- Footer -->
-		<div th:include="usuario/template_usuario.html::footer">
-		</div>
+	<!-- Footer -->
+	<div th:include="usuario/template_usuario.html::footer">
+	</div>
 
-		<!-- Bootstrap core JavaScript -->
-		<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-		<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
