--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -73,7 +73,7 @@
 							<li class="list-group-item">
 								<h5 th:text="'$'+${orden.total}"></h5>
 							</li>
-							<a th:href="@{/orden}" class="btn btn-dark">Ver Orden</a>
+							<a th:href="@{/order}" class="btn btn-dark">Ver Orden</a>
 						</ul>
 					</div>
 
