--- a/src/main/resources/static/css/heroic-features.css
+++ b/src/main/resources/static/css/heroic-features.css
@@ -8,8 +8,11 @@
   position: relative;
 }
 body {
-  margin-top: 4.5em;
-  margin-bottom: 7em;
+  /*margin-top: 4.5em;
+  margin-bottom: 7em;*/
+  margin-bottom: 4em;
+    padding-top: 3.5em;
+    padding-bottom: 2em;
 }
 footer {
   position: absolute;
