--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -10,12 +10,13 @@
 
 	<title>Spring eCommerce</title>
 
-
 	<!-- Bootstrap core CSS -->
 	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/css/stylesMain.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
 
 </head>
 
@@ -26,7 +27,6 @@
 		<div class="container">
 			<a class="navbar-brand" th:href="@{/}">Spring Ecommerce</a>
 
-
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -34,54 +34,45 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Bienvenido</a>
+						<a class="nav-link">Iniciar sesión</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
-
 	<!-- Page Content -->
 	<div class="container">
-
-		<div class="card mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-				</div>
-				<div class="col-md-8">
-					<div class="card-body">
-						<h2>Iniciar sesión</h2>
+		<div class="card card-container">
+			<!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
+			<img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+			<p id="profile-name" class="profile-name-card"></p>
+			<form class="form-signin" th:action="@{/usuario/acceder}" method="post">
+				<span id="reauth-email" class="reauth-email"></span>
+				<input type="email" id="email" name="email" class="form-control" placeholder="Correo electrónico"
+					required autofocus>
+				<div class="form-group">
+					<div class="input-group">
+						<input type="password" id="password" name="password" class="form-control"
+							onkeyup="return passwordChanged();" placeholder="Contraseña" required>
+						<div class="input-group-append">
+							<button class="btn btn-outline-secondary btnPass" style="height:38px;"
+							onclick="mostrarPassword()" type="button" title="Mostrar contraseña">
+								<i class="bi bi-eye-fill icon"></i>
+							</button>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-
-
-		<form th:action="@{/usuario/acceder}" method="post">
-			<div class="form-group">
-				<label for="email"> Email: </label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required
-					autocomplete="off">
-
-			</div>
-
-			<div class="form-group">
-				<label for="pwd"> Contraseña:</label>
-				<input type="password" class="form-control" id="password" name="password"
-					placeholder="Ingrese su contraseña" required>
-			</div>
-
-			<div class="form-group">
-				<div class="col-sm-2">
-					<button type="submit" class="btn btn-dark"> <span class="glyphicon glyphicon-ok"></span>
-						Ingresar</button>
+				<div id="remember" class="checkbox">
+					<label>
+						<input type="checkbox" value="remember-me"> Recordar usuario
+					</label>
 				</div>
-			</div>
-		</form>
-		<a th:href="@{/usuario/registro}" class="card-link">¿Aún no tiene cuenta? Registrarse aquí</a>
-	</div>
-	<!-- /.container -->
+				<button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Ingresar</button>
+			</form><!-- /form -->
+			<a th:href="@{/usuario/registro}" class="card-link forgot-password">¿No tiene cuenta? Registrarse aquí</a>
+		</div><!-- /card-container -->
+	</div><!-- /container -->
 
 	<!-- Footer -->
 	<div th:include="usuario/template_usuario.html::footer">
@@ -90,6 +81,8 @@
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/js/scripts.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
 
 </body>
 
