--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -10,12 +10,13 @@
 
 	<title>Spring eCommerce</title>
 
-
 	<!-- Bootstrap core CSS -->
 	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
-	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	
+	<link th:href="@{/css/stylesRegistry.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
 
 </head>
 
@@ -25,7 +26,6 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
 			<a class="navbar-brand" th:href="@{/}">Spring Ecommerce</a>
-
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,45 +41,49 @@
 		</div>
 	</nav>
 
-
 	<!-- Page Content -->
 	<div class="container">
 
-		<div class="card mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4"></div>
-				<div class="col-md-8">
-					<div class="card-body">
-						<h2>Registro</h2>
-
-					</div>
+		<div class="card card-container">
+			<center>
+				<h2>Registrate</h2>
+			</center>
+			<form id="formLogin" class="form-signin" th:action="@{/usuario/save}" method="post">
+				<div class="form-group">
+					<label for="nombres">Nombre(s):</label> <input type="text" class="form-control" id="nombre"
+						name="nombre" required autocomplete="off">
 				</div>
-			</div>
+
+				<div class="form-group">
+					<label for="email">Email:</label> <input type="email" class="form-control" id="email" name="email"
+						required autocomplete="off">
+				</div>
+
+				<div class="form-group">
+					<label for="direccion">Dirección:</label> <input type="text" class="form-control" id="direccion"
+						name="direccion" required autocomplete="off">
+				</div>
+
+				<div class="form-group">
+					<label for="pwd">Contraseña:</label>
+					<div class="input-group">
+						<input type="password" class="form-control" id="password" name="password" required
+							autocomplete="off" onkeyup="return passwordChanged();">
+						<div class="input-group-append">
+							<button class="btn btn-outline-secondary btnPass" onclick="mostrarPassword()"
+								style="height:38px;" type="button" title="Mostrar contraseña">
+								<i class="bi bi-eye-fill icon"></i>
+							</button>
+						</div>
+					</div>
+					<span id="strength"></span>
+				</div>
+
+				<div class="col-sm-2">
+					<button type="submit" class="btn btn-success">Guardar</button>
+				</div>
+			</form>
 		</div>
-		<form th:action="@{/usuario/save}" method="post">
-			<div class="form-group">
-				<label for="nombres">Nombres:</label> <input type="text" class="form-control" id="nombre" name="nombre"
-					required placeholder="Ingrese sus nombres" autocomplete="off">
-			</div>
-
-			<div class="form-group">
-				<label for="email">Email:</label> <input type="email" class="form-control" id="email" name="email"
-					required placeholder="Ingrese su email" autocomplete="off">
-			</div>
-
-			<div class="form-group">
-				<label for="direccion">Dirección:</label> <input type="text" class="form-control" id="direccion"
-					name="direccion" required placeholder="Ingrese su dirección" autocomplete="off">
-			</div>
-
-			<div class="form-group">
-				<label for="pwd">Contraseña:</label> <input type="password" class="form-control" id="password"
-					name="password" required placeholder="Ingrese su contraseña" autocomplete="off">
-			</div>
-			<div class="col-sm-2">
-				<button type="submit" class="btn btn-success">Guardar</button>
-			</div>
-		</form>
 
 	</div>
 
@@ -92,6 +96,8 @@
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/js/scripts.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
 
 </body>
 
