--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -17,6 +17,7 @@
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 	<link th:href="@{/css/stylesMain.css}" rel="stylesheet">
 	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
+	<link rel="shortcut icon" th:href="@{/vendor/favicon.png}">
 
 </head>
 
