--- a/src/main/resources/static/css/stylesRegistry.css
+++ b/src/main/resources/static/css/stylesRegistry.css
@@ -1,27 +1,29 @@
-body, html {
-    height: 100%;
-    position: relative;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+html {
+  min-height: 100%;
+  position: relative;
 }
 
 body {
-  /*margin-top: 4.5em;
-  margin-bottom: 7em;*/
-  margin-bottom: 4em;
-    padding-top: 3.5em;
-    padding-bottom: 2em;
+  margin: 0;
+  margin-bottom: 40px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
 }
 
 footer {
+  background-color: black;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 40px;
+  color: white;
 }
 
 .card-container.card {
     max-width: 450px;
     padding: 20px 20px;
+    margin-top: 4em;
+    margin-bottom: 7em;
 }
 
 .btn {
