--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -16,6 +16,7 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
 
 </head>
 
@@ -79,7 +80,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="form-group">
 				<div class="col-sm-2">
 					<button type="submit" class="btn btn-success">
 						<span class="glyphicon glyphicon-saved"></span> Guardar
