--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -16,6 +16,7 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
 
 </head>
 
@@ -24,7 +25,7 @@
 	<!-- Navigation -->
 	<div th:include="administrador/template_admin.html::header">
 	</div>
-	
+
 	<!-- Page Content -->
 	<div class="container">
 
@@ -36,7 +37,7 @@
 		</h1>
 
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
 			<li class="breadcrumb-item active">Actualizar Producto</li>
 		</ol>
 
@@ -47,7 +48,8 @@
 				<label class="control-label col-sm-2" for="nombre">Nombre:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="nombre" name="nombre"
-						placeholder="Ingrese el nombre del producto" required autocomplete="off" th:value="${producto.nombre}">
+						placeholder="Ingrese el nombre del producto" required autocomplete="off"
+						th:value="${producto.nombre}">
 					<div id="prueba"></div>
 				</div>
 			</div>
@@ -55,7 +57,8 @@
 				<label class="control-label col-sm-2" for="descripcion">Descripción:</label>
 				<div class="col-sm-10">
 					<textarea class="form-control" id="descripcion" name="descripcion"
-						placeholder="Ingrese la descripcion del producto" required autocomplete="off" th:text="${producto.descripcion}"> </textarea>
+						placeholder="Ingrese la descripcion del producto" required autocomplete="off"
+						th:text="${producto.descripcion}"> </textarea>
 				</div>
 			</div>
 
@@ -63,7 +66,8 @@
 				<label class="control-label col-sm-2" for="cantidad">Cantidad:</label>
 				<div class="col-sm-10">
 					<input type="number" class="form-control" id="cantidad" name="cantidad"
-						placeholder="Ingrese la cantidad del producto" th:value="${producto.cantidad}" required autocomplete="off">
+						placeholder="Ingrese la cantidad del producto" th:value="${producto.cantidad}" required
+						autocomplete="off">
 				</div>
 			</div>
 
@@ -71,7 +75,8 @@
 				<label class="control-label col-sm-2" for="precio">Precio:</label>
 				<div class="col-sm-10">
 					<input type="number" class="form-control" step="any" id="precio" name="precio"
-						placeholder="Ingrese el precio del producto" th:value="${producto.precio}" required autocomplete="off">
+						placeholder="Ingrese el precio del producto" th:value="${producto.precio}" required
+						autocomplete="off">
 				</div>
 			</div>
 
@@ -82,9 +87,9 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="form-group">
 				<div class="col-sm-2">
-					<button type="submit" class="btn btn-success"> Guardar</button>
+				<button type="submit" class="btn btn-success"><i class="bi bi-save"></i> Guardar</button>
 				</div>
 			</div>
 
@@ -95,7 +100,7 @@
 
 	<!-- Footer -->
 	<div th:include="administrador/template_admin.html::footer">
-	</div >
+	</div>
 
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
