--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -16,6 +16,7 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
 
 </head>
 
@@ -68,7 +69,7 @@
 								</li>
 							</ul>
 
-							<button type="submit" class="btn btn-dark">Añadir al carrito </button>
+							<button type="submit" class="btn btn-dark"><i class="bi bi-cart-plus"></i> Añadir al carrito</button>
 
 						</form>
 					</div>
