--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -17,6 +17,7 @@
 	
 	<link th:href="@{/css/stylesRegistry.css}" rel="stylesheet">
 	<link th:href="@{/vendor/bootstrap/css/bootstrap-icons.css}" rel="stylesheet">
+	<link rel="shortcut icon" th:href="@{/vendor/favicon.png}">
 
 </head>
 
@@ -49,9 +50,15 @@
 				<h2>Registrate</h2>
 			</center>
 			<form id="formLogin" class="form-signin" th:action="@{/usuario/save}" method="post">
+			
 				<div class="form-group">
 					<label for="nombres">Nombre(s):</label> <input type="text" class="form-control" id="nombre"
 						name="nombre" required autocomplete="off">
+				</div>
+				
+				<div class="form-group">
+					<label for="nombres">Nombre de usuario:</label> <input type="text" class="form-control" id="username"
+						name="username" required autocomplete="off">
 				</div>
 
 				<div class="form-group">
@@ -62,6 +69,11 @@
 				<div class="form-group">
 					<label for="direccion">Dirección:</label> <input type="text" class="form-control" id="direccion"
 						name="direccion" required autocomplete="off">
+				</div>
+				
+				<div class="form-group">
+					<label for="direccion">Teléfono:</label> <input type="text" class="form-control" id="telefono"
+						name="telefono" required autocomplete="off">
 				</div>
 
 				<div class="form-group">
@@ -79,8 +91,8 @@
 					<span id="strength"></span>
 				</div>
 
-				<div class="col-sm-2">
-					<button type="submit" class="btn btn-success">Guardar</button>
+				<div class="form-group">
+					<button type="submit" class="btn btn-success">Registrarme</button>
 				</div>
 			</form>
 		</div>
