--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -48,7 +48,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" th:href="@{/usuario/compras}"><i class="bi bi-bag"></i> Compras</a>
 							<a class="dropdown-item" th:href="@{/getcart}"><i class="bi bi-cart"></i> Carrito</a>
-							<a class="dropdown-item" th:href="@{/logout}"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a>
+							<a class="dropdown-item" th:href="@{/usuario/logout}"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a>
 						</div>
 					</li>
 				</ul>
